# Cinder

./: .gitignore  .gitmodules
blocks/LocationManager/src/cinder/: LocationManager.h  LocationManagerAndroid.cpp  LocationManagerIOS.cpp
blocks/LocationManager/src/cinder/java/org/libcinder/locationmanager/: LocationManagerCinder.java
blocks/MotionManager/src/cinder/: MotionImplAndroid.cpp
include/cinder/: CinderFwd.h  Filesystem.h
include/cinder/android/: CinderAndroid.h
include/cinder/android/app/: CinderNativeActivity.h
include/cinder/app/android/: android_fopen.h
include/cinder/linux/: GstPlayer.h
include/glload/: _int_glx_exts.h  _int_glx_type.h
lib/android/: libcinder-debug.aar
samples/BasicApp/androidstudio/BasicApp/gradle/wrapper/: gradle-wrapper.properties
samples/LocationManager/androidstudio/LocationManager/app/: CMakeLists.txt  build.gradle
samples/LocationManager/androidstudio/LocationManager/app/src/main/: AndroidManifest.xml
samples/LocationManager/androidstudio/LocationManager/app/src/main/java/org/libcinder/sample/locationmanager/: LocationManagerActivity.java
samples/LocationManager/androidstudio/LocationManager/app/src/main/java/org/libcinder/sample/locationmanagerapp/: LocationManagerAppActivity.java
samples/LocationManager/androidstudio/LocationManager/gradle/wrapper/: gradle-wrapper.properties
src/cinder/: CaptureImplJni.cpp
src/cinder/android/app/: CinderNativeActivity.cpp
src/cinder/app/android/: AssetFileSystem.cpp  EventManagerAndroid.cpp  PlatformAndroid.cpp
src/cinder/java/: build.gradle
(+3 files in other folders)
